# pybash

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pybash_cython/: pyproject.toml  setup.py
pybash_cython/pybash/: __init__.py  _main.pyi  _main.pyx  constants.pyi  functions.pyi  functions.pyx  util.pyi  util.pyx
pybash_cython/pybash.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: conio.pyi  pyconio.c
src/pybash/: __init__.py  __main__.py  _main.py  constants.py  functions.py
src/pybash.egg-info/: PKG-INFO  SOURCES.txt
src/pybash/util/: __init__.py  arguments.py  variables.py  variables.pyi  version.py
