[build-system]
requires = [
  "setuptools>=40.8",
]
build-backend = "setuptools.build_meta"

[project]
name = "pybash"
version = "1.0.4"
authors = [
  {name="Filipi565"},
]

description = "a simple Windows bash shell"
readme = "README.md"
requires-python = ">=3.8"
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]

[project.urls]
Source = "https://github.com/Filipi565/pybash"
Issues = "https://github.com/Filipi565/pybash/issues"
